jupyter changes added

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 AI_ML_KR/csv_data/.DS_Store
 AI_ML_KR/Assignment#3/csv_data/.DS_Store
+AI_ML_KR/Assignment#1/.ipynb_checkpoints/question5jyp-checkpoint.py
+AI_ML_KR/Assignment#1/.ipynb_checkpoints/Untitled-checkpoint.ipynb
+AI_ML_KR/Assignment#1/question5jyp.py
